<resources>
    <string name="app_name">iota counter</string>
    <string name="new_games">NEW GAME</string>
    <string name="scores">SCORES</string>
    <string name="quantity_players">Quantity players</string>
    <string name="title_activity_new_game">Activity_new_game</string>
    <string name="total_scores">Total scores:</string>
    <string name="best_result">Best result:</string>
    <string name="settings">Settings</string>
    <string name="settings_menu">iota counter</string>
    <string name="developer">Developed by Pavel Aksyonov (2019)</string>
    <string name="Enter_result_for_player">Enter result for: Player</string>
    <string name="score_name">score_name</string>
    <string name="score_result">score_result</string>
    <string name="score_date">score_date</string>
    <string name="tv_tops_score_quantity_players">Qty pl</string>
    <string name="exit">EXIT</string>
    <string name="game_over">GAME OVER</string>
    <string name="input_result">Input result here</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="continue_game">Continue</string>
    <string name="no_dialog">NO!</string>
    <string name="yes_dialog">YES</string>
    <string name="timer">Timer</string>
    <string name="toolbar_settings_title">iota counter: Settings</string>

    <string-array name="timer_time">
        <item>2 min</item>
        <item>3 min</item>
        <item>5 min</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="save">SAVE</string>

</resources>
