<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">


    <Button
        android:id="@+id/bt_new_game"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="412dp"
        android:background="@drawable/button_red_background"
        android:text="@string/new_games"
        android:textColor="@color/colorAccent"
        android:textSize="16dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_best_scores"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="413dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="100dp"
        android:layout_toEndOf="@+id/bt_new_game"
        android:layout_toRightOf="@+id/bt_new_game"
        android:text="@string/scores"
        android:background="@drawable/button_green_background"
        android:textColor="@color/colorAccent"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_qp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:layout_marginBottom="179dp"
        android:text="@string/quantity_players"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bt_qp_2"
        android:layout_width="51dp"
        android:layout_height="38dp"
        android:layout_below="@+id/bt_new_game"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="59dp"
        android:text="2"
        android:textColor="@color/colorAccent"
        android:background="@drawable/button_blue_background"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bt_qp_3"
        android:layout_width="51dp"
        android:layout_height="38dp"
        android:layout_below="@+id/bt_new_game"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="59dp"
        android:layout_toEndOf="@+id/bt_qp_2"
        android:layout_toRightOf="@+id/bt_qp_2"
        android:text="3"
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        android:background="@drawable/button_blue_background"

        />

    <Button
        android:id="@+id/bt_qp_4"
        android:layout_width="51dp"
        android:layout_height="38dp"
        android:layout_below="@+id/bt_new_game"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="4"
        android:textColor="@color/colorAccent"
        android:background="@drawable/button_blue_background"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="360dp"
        android:layout_height="281dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="106dp"
        app:srcCompat="@drawable/main_logo_v2" />

</RelativeLayout>