<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_new_game">

    <RelativeLayout
        android:layout_width="567dp"
        android:layout_height="709dp">

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="57dp"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="33dp"
            android:layout_marginBottom="311dp"
            android:layout_toEndOf="@+id/ed_tx_next_value"
            android:layout_toRightOf="@+id/ed_tx_next_value"
            android:background="@drawable/button_green_background"
            android:text="OK"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_skip"
            android:layout_width="57dp"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginBottom="311dp"
            android:layout_toEndOf="@+id/bt_ok"
            android:layout_toRightOf="@+id/bt_ok"
            android:background="@drawable/button_orange_background"
            android:text="Skip"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_game_end"
            android:layout_width="90dp"
            android:layout_height="34dp"
            android:layout_below="@+id/ed_tx_next_value"
            android:layout_alignLeft="@+id/ed_tx_next_value"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="250dp"
            android:background="@drawable/button_red_background"
            android:text="@string/game_over"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tx_pl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="129dp"
            android:text="@string/player_1" />


        <EditText
            android:id="@+id/ed_tx_next_value"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tx_pl1"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="225dp"
            android:hint="@string/input_result"
            android:layout_below="@+id/tx_press_result"
            android:inputType="number" />

        <TextView
            android:id="@+id/tx_pl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tx_pl1"
            android:layout_alignLeft="@+id/tx_pl1"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="176dp"
            android:inputType="text"
            android:text="@string/player_2" />

        <TextView
            android:id="@+id/tx_current_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="328dp"
            android:layout_toEndOf="@+id/tx_press_result"
            android:layout_toRightOf="@+id/tx_press_result"
            android:inputType="text"
            android:text="1" />

        <TextView
            android:id="@+id/tx_press_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="328dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:inputType="text"
            android:text="@string/Enter_result_for_player" />

        <TextView
            android:id="@+id/tx_pl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tx_pl1"
            android:layout_alignLeft="@+id/tx_pl1"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="223dp"
            android:text="@string/player_3"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tx_pl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tx_pl1"
            android:layout_alignLeft="@+id/tx_pl1"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="272dp"
            android:text="@string/player_4"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tx_scores_users_1"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="145dp"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="128dp"
            android:layout_toEndOf="@+id/tx_pl1"
            android:layout_toRightOf="@+id/tx_pl1"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/tx_prev_result_user1"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="129dp"
            android:layout_toEndOf="@+id/tx_pl1"
            android:layout_toRightOf="@+id/tx_pl1"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/tx_prev_result_user2"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_prev_result_user1"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="29dp"
            android:layout_toEndOf="@+id/tx_pl2"
            android:layout_toRightOf="@+id/tx_pl2"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_prev_result_user1"
            android:layout_marginStart="304dp"
            android:layout_marginLeft="304dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/tx_scores_users_2"
            android:layout_toRightOf="@+id/tx_scores_users_2"
            android:text="TextView" />

        <TextView
            android:id="@+id/tx_prev_result_user3"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_prev_result_user2"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="-29dp"
            android:layout_toEndOf="@+id/tx_pl3"
            android:layout_toRightOf="@+id/tx_pl3"
            android:inputType="text"
            android:text=""
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tx_prev_result_user4"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_prev_result_user3"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="29dp"
            android:layout_toEndOf="@+id/tx_pl4"
            android:layout_toRightOf="@+id/tx_pl4"
            android:inputType="text"
            android:text=""
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tx_scores_users_2"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_scores_users_1"
            android:layout_marginStart="144dp"
            android:layout_marginLeft="144dp"
            android:layout_marginTop="29dp"
            android:layout_toEndOf="@+id/tx_pl1"
            android:layout_toRightOf="@+id/tx_pl1"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/tx_scores_users_3"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_scores_users_2"
            android:layout_marginStart="145dp"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="29dp"
            android:layout_toEndOf="@+id/tx_pl3"
            android:layout_toRightOf="@+id/tx_pl3"
            android:inputType="text"
            android:text=""
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tx_scores_users_4"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_scores_users_3"
            android:layout_marginStart="144dp"
            android:layout_marginLeft="144dp"
            android:layout_marginTop="29dp"
            android:layout_toEndOf="@+id/tx_pl1"
            android:layout_toRightOf="@+id/tx_pl1"
            android:inputType="text"
            android:text=""
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tx_Previous_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tx_press_result"
            android:layout_alignParentTop="true"
            android:layout_marginStart="89dp"
            android:layout_marginTop="90dp"
            android:text="Previous result" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="90dp"
            android:layout_toEndOf="@+id/tx_Previous_result"
            android:layout_toRightOf="@+id/tx_Previous_result"
            android:text="Scores" />

        <TextView
            android:id="@+id/tv_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="117dp"
            android:layout_marginLeft="117dp"
            android:layout_marginTop="91dp"
            android:layout_toEndOf="@+id/tx_Previous_result"
            android:layout_toRightOf="@+id/tx_Previous_result"

            android:text="TEST" />


    </RelativeLayout>



    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>