<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_current_scores">

    <TextView
        android:id="@+id/tx_best_result_pl_3"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="265dp"
        android:layout_marginLeft="265dp"
        android:layout_marginBottom="201dp"
        android:text="0"
        android:textSize="16dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tx_best_result_pl_4"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="265dp"
        android:layout_marginLeft="265dp"
        android:layout_marginBottom="122dp"
        android:text="0"
        android:textSize="16dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/kubok_scores"
        android:layout_width="230dp"
        android:layout_height="171dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/kubok2" />

    <TextView
        android:id="@+id/tx_champ_name"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_centerHorizontal="true"

        android:layout_marginStart="150dp"
        android:layout_marginLeft="25dp"
        android:layout_alignTop="@+id/kubok_scores"
        android:layout_alignBottom="@+id/kubok_scores"
        android:layout_marginTop="142dp"
        android:layout_marginBottom="7dp"
        android:text="Champion"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_scores_pl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginBottom="368dp"
        android:text="Player 1"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_scores_pl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginBottom="294dp"
        android:text="Player 2"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_scores_pl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginBottom="215dp"
        android:text="Player 3"
        android:textSize="16dp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tx_scores_pl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginBottom="135dp"
        android:text="Player 4"
        android:textSize="16dp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tx_scores_1"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="383dp"
        android:text="@string/total_scores"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tx_scores_2"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="307dp"
        android:text="@string/total_scores"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tx_scores_3"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="228dp"
        android:text="@string/total_scores"
        android:textSize="16dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tx_scores_4"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="152dp"
        android:text="@string/total_scores"
        android:textSize="16dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tx_total_scores_pl_1"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="265dp"
        android:layout_marginLeft="265dp"
        android:layout_marginBottom="383dp"
        android:text="0"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tx_total_scores_pl_2"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="265dp"
        android:layout_marginLeft="265dp"
        android:layout_marginBottom="307dp"
        android:text="0"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tx_total_scores_pl_3"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="265dp"
        android:layout_marginLeft="265dp"
        android:layout_marginBottom="228dp"
        android:text="0"
        android:textSize="16dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tx_total_scores_pl_4"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="265dp"
        android:layout_marginLeft="265dp"
        android:layout_marginBottom="152dp"
        android:text="0"
        android:textSize="16dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tx_best_result_pl_1"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="265dp"
        android:layout_marginLeft="265dp"
        android:layout_marginBottom="353dp"
        android:text="0"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tx_best_result_pl_2"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="265dp"
        android:layout_marginLeft="265dp"
        android:layout_marginBottom="278dp"
        android:text="0"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tx_best_result_1"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="353dp"
        android:text="@string/best_result"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tx_best_result_2"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="280dp"
        android:text="@string/best_result"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tx_best_result_3"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="202dp"
        android:text="@string/best_result"
        android:textSize="16dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tx_best_result_4"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="125dp"
        android:text="@string/best_result"
        android:textSize="16dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bt_scores_main"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_below="@+id/kubok_scores"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="378dp"
        android:background="@drawable/button_red_background"
        android:text="@string/exit"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_TOP"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_below="@+id/kubok_scores"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_orange_background"
        android:text="TOP"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />


</RelativeLayout>
